tests/cases/compiler-development/artifact/errors/diagnostic-private-access.diagnostic
diagnostic error code=M0001 family=module message="function 'Secret::value' is not public" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-private-access.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-private-access.ari" bytes=103
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-private-access.ari" line=8 column=10 end_line=8 end_column=16 byte_start=84 byte_end=90 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-private-access.ari:8:10\n   |\n 8 |   return Secret::value();\n   |          ^^^^^^"
